# ChangeLog for media-libs/lasi
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/lasi/ChangeLog,v 1.22 2011/11/27 04:05:57 bicatali Exp $

*lasi-1.1.1 (27 Nov 2011)

  27 Nov 2011; Sébastien Fabbro <bicatali@gentoo.org> -lasi-1.1.0-r1.ebuild,
  +lasi-1.1.1.ebuild:
  Version bump

  10 Jan 2011; Brent Baude <ranger@gentoo.org> lasi-1.1.0-r2.ebuild:
  stable ppc, bug 343521

  05 Dec 2010; Raúl Porcel <armin76@gentoo.org> lasi-1.1.0-r2.ebuild:
  alpha/sparc stable wrt #343521

  05 Nov 2010; Samuli Suominen <ssuominen@gentoo.org> lasi-1.1.0-r2.ebuild:
  ppc64 stable wrt #343521

  04 Nov 2010; Jeroen Roovers <jer@gentoo.org> lasi-1.1.0-r2.ebuild:
  Stable for HPPA (bug #343521).

  04 Nov 2010; Christian Faulhammer <fauli@gentoo.org> lasi-1.1.0-r2.ebuild:
  stable x86, bug 343521

  31 Oct 2010; Markos Chandras <hwoarang@gentoo.org> lasi-1.1.0-r2.ebuild:
  Stable on amd64 wrt bug #343521

*lasi-1.1.0-r2 (18 Sep 2010)

  18 Sep 2010; Andreas K. Huettel <dilfridge@gentoo.org>
  +lasi-1.1.0-r2.ebuild, +files/lasi-1.1.0-pkgconfig.patch:
  Added workaround patch to create a sane pkgconfig file. Fixes bug
  312799.

  14 Jan 2010; Jeroen Roovers <jer@gentoo.org> lasi-1.1.0-r1.ebuild:
  Stable for HPPA (bug #284689).

  04 Nov 2009; Raúl Porcel <armin76@gentoo.org> lasi-1.1.0-r1.ebuild:
  sparc stable wrt #284857

  31 Oct 2009; Brent Baude <ranger@gentoo.org> lasi-1.1.0-r1.ebuild:
  Marking lasi-1.1.0-r1 ppc64 for bug 284689

  07 Oct 2009; nixnut <nixnut@gentoo.org> lasi-1.1.0-r1.ebuild:
  ppc stable #284689

  03 Oct 2009; Tobias Klausmann <klausman@gentoo.org> lasi-1.1.0-r1.ebuild:
  Stable on alpha, bug #284689

  14 Sep 2009; Markus Meier <maekke@gentoo.org> lasi-1.1.0-r1.ebuild:
  amd64/x86 stable, bug #283965

  30 May 2009; Tiago Cunha <tcunha@gentoo.org> lasi-1.1.0-r1.ebuild:
  keyworded ~arch for sparc, bug 265013

  12 May 2009; Jeroen Roovers <jer@gentoo.org> lasi-1.1.0-r1.ebuild: