@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/lasi
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/lasi/ChangeLog,v 1.22 2011/11/27 04:05:57 bicatali Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/lasi/ChangeLog,v 1.23 2012/02/20 09:54:55 jlec Exp $
+
+  20 Feb 2012; Justin Lecher <jlec@gentoo.org> lasi-1.1.1.ebuild, metadata.xml:
+  Use PATCHES array and convert mycmakeargs to an array
 
 *lasi-1.1.1 (27 Nov 2011)
 
